[gd_scene load_steps=7 format=3 uid="uid://dm5ivslqnb6n5"]

[ext_resource type="Script" path="res://script/settings.gd" id="1_ryncp"]
[ext_resource type="Theme" uid="uid://deehlrh573mkc" path="res://red_theme.tres" id="3_ja460"]
[ext_resource type="FontFile" uid="uid://v8wwvuijl17k" path="res://Rakoon_PersonalUse.ttf" id="3_uaoke"]
[ext_resource type="Texture2D" uid="uid://of4r02qrh257" path="res://assets/ui/en.png" id="4_qgi5a"]
[ext_resource type="Texture2D" uid="uid://c6cqdoc7jbosy" path="res://assets/ui/de.png" id="5_dejp1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ug7af"]
bg_color = Color(0.180392, 0.133333, 0.184314, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.243137, 0.207843, 0.27451, 1)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ryncp")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 739.0
offset_top = 153.0
offset_right = -739.0
offset_bottom = -153.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ug7af")

[node name="VBoxBegin" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxBegin"]
layout_mode = 2
theme_override_constants/margin_top = 24

[node name="Settings" type="Label" parent="Panel/VBoxBegin"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_ja460")
theme_override_font_sizes/font_size = 101
text = "Key/Settings"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxBegin"]
layout_mode = 2
theme_override_constants/margin_top = 17

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxBegin"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxBegin/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxBegin/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="FullscreenContainer" type="HBoxContainer" parent="Panel/VBoxBegin/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
alignment = 1

[node name="Full" type="Label" parent="Panel/VBoxBegin/VBoxContainer/HBoxContainer2/VBoxContainer/FullscreenContainer"]
layout_mode = 2
theme = ExtResource("3_ja460")
text = "Key/Fullscreen"

[node name="CheckButton" type="CheckButton" parent="Panel/VBoxBegin/VBoxContainer/HBoxContainer2/VBoxContainer/FullscreenContainer"]
layout_mode = 2

[node name="MusicContainer" type="VBoxContainer" parent="Panel/VBoxBegin/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="music" type="Label" parent="Panel/VBoxBegin/VBoxContainer/HBoxContainer2/VBoxContainer/MusicContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme = ExtResource("3_ja460")
text = "Key/Music"

[node name="audioSlider" type="HSlider" parent="Panel/VBoxBegin/VBoxContainer/HBoxContainer2/VBoxContainer/MusicContainer"]
layout_mode = 2
theme = ExtResource("3_ja460")
min_value = -20.0
max_value = 10.0

[node name="LanguageContainer" type="VBoxContainer" parent="Panel/VBoxBegin/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxBegin/VBoxContainer/HBoxContainer2/VBoxContainer/LanguageContainer"]
layout_mode = 2
theme = ExtResource("3_ja460")
text = "Key/Language"

[node name="OptionButton" type="OptionButton" parent="Panel/VBoxBegin/VBoxContainer/HBoxContainer2/VBoxContainer/LanguageContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_uaoke")
theme_override_font_sizes/font_size = 40
item_count = 2
selected = 0
popup/item_0/text = "Key/English"
popup/item_0/icon = ExtResource("4_qgi5a")
popup/item_0/id = 0
popup/item_1/text = "Key/German"
popup/item_1/icon = ExtResource("5_dejp1")
popup/item_1/id = 1

[node name="TextSpeedContainer" type="VBoxContainer" parent="Panel/VBoxBegin/VBoxContainer/HBoxContainer2/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Speed" type="Label" parent="Panel/VBoxBegin/VBoxContainer/HBoxContainer2/VBoxContainer/TextSpeedContainer"]
layout_mode = 2
theme = ExtResource("3_ja460")
text = "Text Speed"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxBegin/VBoxContainer/HBoxContainer2/VBoxContainer/TextSpeedContainer"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="Panel/VBoxBegin/VBoxContainer/HBoxContainer2/VBoxContainer/TextSpeedContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_ja460")
toggle_mode = true
text = "slow"

[node name="Button2" type="Button" parent="Panel/VBoxBegin/VBoxContainer/HBoxContainer2/VBoxContainer/TextSpeedContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_ja460")
toggle_mode = true
button_pressed = true
text = "fast"

[node name="VBoxEnd" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -66.0
offset_top = -66.0
offset_right = 66.0
grow_horizontal = 2
grow_vertical = 0
alignment = 2

[node name="back" type="Button" parent="Panel/VBoxEnd"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("3_ja460")
text = "Back"

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxEnd"]
layout_mode = 2
theme_override_constants/margin_bottom = 18

[connection signal="toggled" from="Panel/VBoxBegin/VBoxContainer/HBoxContainer2/VBoxContainer/FullscreenContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="value_changed" from="Panel/VBoxBegin/VBoxContainer/HBoxContainer2/VBoxContainer/MusicContainer/audioSlider" to="." method="_on_audio_slider_value_changed"]
[connection signal="item_selected" from="Panel/VBoxBegin/VBoxContainer/HBoxContainer2/VBoxContainer/LanguageContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Panel/VBoxEnd/back" to="." method="_on_button_pressed"]
